changing articles and projects

--- a/src/pages/articles/who-is-don-draper/index.mdx
+++ b/src/pages/articles/who-is-don-draper/index.mdx
@@ -2,22 +2,22 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 import Image from 'next/future/image'
 import donDraper from './donDraper.webp'
 import peggydon from './peggydon.webp'
-import betty from './betty.webp'
+import finale from './finale.webp'
 import dons from './dons.webp'
 
 export const meta = {
   author: 'Mo Amin',
   date: '2022-09-05',
-  title: 'Who Is Don Draper?',
+  title: ' Mad Men: Who Is Don Draper?',
   description:
-    'The protagonist of Mad Men asks himself this question through all seven seasons of the show. Don’s inability to answer indicates the identity crisis at the heart of story.',
+    'The protagonist of Mad Men asks himself this question through all seven seasons of the show. Don’s inability to answer indicates the identity crisis at the heart of story. In this analysis, we deep dive into the psyche of the evergreen anti-hero.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-The protagonist of Mad Men asks himself this question through all seven seasons of the show. Don's inability to answer indicates the identity crisis at the heart of the story.
+<Image src={dons} alt="don draper" />
 
-<Image src={donDraper} alt="don draper" />
+The protagonist of Mad Men asks himself this question through all seven seasons of the show. Don's inability to answer indicates the identity crisis at the heart of the story. In this analysis, we deep dive into the psyche of this evergreen anti-hero.
 
 It’s highly symbolic that the man we know as Don is not actually Don Draper. Even his name is a lie. He was born Dick Whitman, but switched dog tags with a dead soldier in the Korean War to escape poverty.
 
@@ -29,27 +29,27 @@ As a successful creative director who feels like a fraud, Don embodies the class
 
 ## Chasing The Image: There Is No Don
 
-The opening credits set up the entire show. Announcing to us that this is a story about a man who appears perfect but feels like he's dying inside. We see a man in a beautiful world who's helped to create its images of perfection but himself feels like a dark shadow against that shiny surface. And who's falling deeper and deeper into a pit of despair.
+The opening credits set up the entire show. Announcing to us that this is a story about a man who appears perfect but feels like he's dying inside. We see a man in a beautiful world who's helped to create its images of perfection but he himself feels like a dark shadow against that shiny surface. And who's falling deeper and deeper into a pit of despair.
 
-Don is the vision of a perfect man; brilliant, successful, handsome and, timeless. What's ironic is he himself also wants to **be like Don**. Because while he's succeeded in appearing utterly confident and assured that he looks like the ultimate insider to us, he still feels unworthy.
+Don is the vision of a perfect man - brilliant, successful, handsome, and timeless. What's ironic is he himself also wants to **be like Don**. Because, while he's succeeded in appearing utterly confident and assured that he looks like the ultimate insider to us, he still feels unworthy.
 
-<Image src={dons} alt="don draper" />
+<Image src={donDraper} alt="don draper" />
 
-Show creator Matthew Weiner has said that the show is about becoming _"becoming white"_. That's the defection of success in America, _"becoming a WASP. A WASP male"_. Even though Don is, of course, white - Weiner is using whiteness here to speak about wealth inclusion and respect that is given to the top people in our society. Being white in this sense means feeling like an insider.
+Show creator Matthew Weiner has said that the show is about _"becoming white"_. That's the definition of success in America, _"becoming a WASP. A WASP male"_. Even though Don is, of course, white - Weiner is using whiteness here to speak about wealth inclusion and respect that is given to the top people in our society. Being white in this sense means feeling like an insider.
 
-But striving to belong and attain this status comes with the cost of concealing parts of ourselves that don't fit in the mainstream identity. Many of the characters of the show are outsides in some way, who have to erase a part of themselves to be accepted. The price these characters pay is disowning the things that make them unique or different.
+But striving to belong and attain this status comes with the cost of concealing parts of ourselves that don't fit in the mainstream identity. Many of the characters on the show are outsiders in some way, who have to erase a part of themselves to be accepted. The price these characters pay is disowning the things that make them unique or different. Most interestingly, Don.
 
 ## Reflection of America
 
-Don also represents a larger truth about 20th century America. That many of our country's greatest’s achievements came from sweeping dark deeds under the rug. Like using or abusing others and changing the narrative to portray ourselves in the best possible light. This is why historical events on the show often mirror the state of Don's own life.
+Don also represents a larger truth about 20th century America. That many of our country's greatest achievements came from sweeping dark deeds under the rug. Like using or abusing others and changing the narrative to portray ourselves in the best possible light. This is why historical events on the show often mirror the state of Don's own life.
 
-The end of his marriage to Betty plays out alongside with the JFK assassination in the [End Of Camelot](https://www.imdb.com/title/tt1484251/). The tumultuous events of 1968 coincide with his slip back into a cycle of self-destruction. And the moon landing takes place as Don let's Peggy deliver the Burger Chef pitch in his place. Her speech reminds us of Don's iconic carousal pitch. So, the optimism of the moon landing is reflected in Don's encouraging of the next generation and getting a vision of the future through his protege, Peggy.
+The end of his marriage to Betty plays out alongside with the JFK assassination in the [The Grown-Ups](https://www.imdb.com/title/tt1484251/). The tumultuous events of 1968 coincide with his slip back into a cycle of self-destruction. And the moon landing takes place as Don let's Peggy deliver the Burger Chef pitch in his place. Her speech reminds us of Don's iconic carousal pitch. So, the optimism of the moon landing is reflected in Don's encouraging of the next generation and getting a vision of the future through his protégé, Peggy.
 
 <Image src={peggydon} alt="peggy and don" />
 
 ## _"The universe is indifferent"_
 
-When a neighbor jokingly asks, "and who are you supposed to be?", we understand that they wear figurative masks. However, convincing his persona, he still feels like a fraud. Unsure of what he is really aspiring towards. But nobody can be Don, **because there is no Don**.
+When a neighbor jokingly asks Don, "and who are you supposed to be?", we understand that they wear figurative masks. However, convincing his persona, he still feels like a fraud. Unsure of what he is really aspiring towards. But nobody can be Don, **because there is no Don**.
 
 The song in the season five finale, _You Only Live Twice_, reminds us of Don's two identities as well as his endless repetitions of the same mistakes. Don's self-imposed amnesia and his repetition of the same behavior again is meant to represent the US' relationship to its past. And how denying painful or traumatic events in our history just leads to them resurfacing in unexpected ways.
 
@@ -59,8 +59,8 @@ Mad Men shows us that acceptance of the past, not denial, is what allows people 
 
 After his divorce, he reveals his true identity in new romantic relationships. Yet, just admitting the literal truth of his past doesn't mean he's honestly confronting the inadequacy and deceitful habits he's developed to cope over the years. Don's journey is about more than him admitting his real name is Dick Whitman. Because by the end of the show, he's not just Dick anymore. Just like he's not only Don Draper. He's truly a self-made man.
 
-<Image src={betty} alt="betty" />
+<Image src={finale} alt="mad men finale" />
 
-When he calls the three most important woman in his life in the series finale, he's reaching out for an honest connection that he once denied himself. And the episode title [Person To Person](https://www.imdb.com/title/tt3756834/) tells us that Don is finally baring his true self to the people he loves.
+When he calls the three most important women in his life in the series finale, he's reaching out for an honest connection that he once denied himself. And the episode title [Person To Person](https://www.imdb.com/title/tt3756834/) tells us that Don is finally baring his true self to the people he loves.
 
 Don is implied to be the creator of the famous hilltop Coca Cola ad, and for the first time, his creativity comes from a unified place, instead of longing and deep sadness. He's finally reconciled the suave Don Draper with the ashamed Dick Whitman. And the result is advertising at its best - hopeful, aspirational, painting a beautiful vision of the future. This finally confirms that **there is hope for this new Don after all**.
